--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <title>卡片导航</title>
     <style type="text/css">
         .icon {
-           width: 50px; height: 50px;
+           width: 1em; height: 1em;
            vertical-align: -0.15em;
            fill: currentColor;
            overflow: hidden;
@@ -24,59 +24,7 @@
     </header>
     <main class="cardTable">
         <ul class="cards">
-            <li>
-                <a href="https://www.acfun.cn/" target="_blank">
-                    <div class="siteCard">
-                        <div class="siteLogo">A</div>
-                        <div class="siteLink">a.com</div>
-                    </div>
-                </a>
-            </li>
-            <li>
-                <div class="siteCard">
-                    <div class="siteLogo">B</div>
-                    <div class="siteLink">b.com</div>
-                </div>
-            </li><li>
-                <div class="siteCard">
-                    <div class="siteLogo">B</div>
-                    <div class="siteLink">b.com</div>
-                </div>
-            </li><li>
-                <div class="siteCard">
-                    <div class="siteLogo">B</div>
-                    <div class="siteLink">b.com</div>
-                </div>
-            </li><li>
-                <div class="siteCard">
-                    <div class="siteLogo">B</div>
-                    <div class="siteLink">b.com</div>
-                </div>
-            </li>
-            <li>
-                <div class="siteCard">
-                    <div class="siteLogo">B</div>
-                    <div class="siteLink">b.com</div>
-                </div>
-            </li>
-            <li>
-                <div class="siteCard">
-                    <div class="siteLogo">B</div>
-                    <div class="siteLink">b.com</div>
-                </div>
-            </li>
-            <li>
-                <div class="siteCard">
-                    <div class="siteLogo">C</div>
-                    <div class="siteLink">c.com</div>
-                </div>
-            </li>
-            <li>
-                <div class="siteCard">
-                    <div class="siteLogo">C</div>
-                    <div class="siteLink">c.com</div>
-                </div>
-            </li>
+            
             <li class="siteAdd">
                 <div class="iconAdd">
                     <svg class="icon">
@@ -90,7 +38,7 @@
     <footer class="copyrightInfor">
         
     </footer>
-    <script src="https://at.alicdn.com/t/font_2799526_rj6h65sko5n.js"></script>
+    <script src="//at.alicdn.com/t/font_2799526_78xpvxe23dy.js"></script>
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="main.js"></script>
 </body>
