--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header class="searchTab">
-        <form class="searchForm" method="get" action="https://cn.bing.com/search?" target="_blank">
+        <form class="searchForm" method="get" action="https://cn.bing.com/search?" autocomplete="off">
             <input name="q" type="text">
             <button type="submit">搜 索</button>
         </form>
